MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/signature__FieldValue__c.object-meta.xml
<CustomObject>
    <description>Field values for defaulting on the form</description>
    <label>ß Field Value</label>
    <nameField>
        <displayFormat>FV{000000}</displayFormat>
        <label>FV#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ß Field Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>