MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/fields/signature__DefaultValueField__c.field-meta.xml
<CustomField>
    <fullName>signature__DefaultValueField__c</fullName>
    <label>Default Value Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>