MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/fields/signature__Field__c.field-meta.xml
<CustomField>
    <fullName>signature__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>