MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/fields/signature__ForceOverwrite__c.field-meta.xml
<CustomField>
    <fullName>signature__ForceOverwrite__c</fullName>
    <label>Force Overwrite</label>
    <length>10</length>
    <type>Text</type>
</CustomField>