MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/fields/signature__RecordID__c.field-meta.xml
<CustomField>
    <fullName>signature__RecordID__c</fullName>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>