MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/fields/signature__Status__c.field-meta.xml
<CustomField>
    <fullName>signature__Status__c</fullName>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>