MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/fields/signature__UpdateType__c.field-meta.xml
<CustomField>
    <fullName>signature__UpdateType__c</fullName>
    <label>Update Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>