MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/fields/signature__UserID__c.field-meta.xml
<CustomField>
    <fullName>signature__UserID__c</fullName>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>