MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/fields/signature__Value__c.field-meta.xml
<CustomField>
    <fullName>signature__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>