MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/fields/signature__ValueBoolean__c.field-meta.xml
<CustomField>
    <fullName>signature__ValueBoolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Value Boolean</label>
    <type>Checkbox</type>
</CustomField>