MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/fields/signature__ValueDate__c.field-meta.xml
<CustomField>
    <fullName>signature__ValueDate__c</fullName>
    <label>Value Date</label>
    <type>Date</type>
</CustomField>