MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/fields/signature__ValueDateTime__c.field-meta.xml
<CustomField>
    <fullName>signature__ValueDateTime__c</fullName>
    <label>Value DateTime</label>
    <type>DateTime</type>
</CustomField>