MyDemoOrg/force-app/main/default/objects/signature__FieldValue__c/fields/signature__ValueNumeric__c.field-meta.xml
<CustomField>
    <fullName>signature__ValueNumeric__c</fullName>
    <label>Value Numeric</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>